--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "senthil-personal-website",
+  "name": "Hospital",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.18.1",
+    "framer-motion": "^12.19.1",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
